--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@
 </div>
   <div id="staggered-test2" class="col s12 offset-m1 m7">
     <div class="row">
-    <ul id="tabs-swipe" class="tabs tabs-fixed-width">
+    <ul id="tabs-swipe" class="tabs tabs-fixed-width ">
       <li class="tab col s3"><a class="active" href="#test-swipe-1">Experience</a></li>
       <li class="tab col s3"><a href="#test-swipe-2">Education</a></li>
       <li class="tab col s3"><a href="#test-swipe-3">Tools</a></li>
@@ -47,6 +47,7 @@
     <div class="black-text">
     <div id="test-swipe-1" class="col s12">
       <div class="black-text">
+        <br>
         <div class="section">
           <div class="row">
             <div class="col s3"><strong>10/2010 - Present</strong></div>
@@ -56,7 +57,7 @@
         <div class="divider"></div>
         <div class="section">
           <div class="row">
-            <div class="col s3"><p><strong>11/2009 - 02/2010</strong></p></div>
+            <div class="col s3"><p><strong>11/2009 - 09/2010</strong></p></div>
             <div class="col s9">
               <p>Fotomontaje de imagenes y diseños 3D</p>
               <p>Fotomontajes aplicados sobre diferentes espacios , principalmente  fotos de shoppings. Aplicando en los mismos imagenes de productos navideños, usando como principal herramienta Photoshop e Ilustrator.</p>
@@ -121,7 +122,43 @@
 
       </div>
     </div>
-    <div id="test-swipe-2" class="col s12 red">Test 2</div>
+    <div id="test-swipe-2" class="col s12">
+      <br>
+      <div class="section">
+        <div class="row">
+          <div class="col s3">
+            <strong>Tertiary Education</strong>
+          </div>
+          <div class="col s9">
+            Ingreso en el año 2007 a la Escuela Da Vinci, en la carrera Diseño Multimedial. <br> En curso (6to. y último cuatrimestre)
+            <p>Egresado en el año 2005 del ISFDyT Nº 46 en la carrera Analista de Sistemas con orientación en Desarrollo de Aplicaciones.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="section">
+        <div class="row">
+          <div class="col s3">
+            <strong>High School</strong>
+          </div>
+          <div class="col s9">
+            Egresada en el año 2001 de la Escuela de enseñanza Media Nº 6 Jose  Felix Bogado con el titulo de Bachiller en Ciencias Naturales.
+          </div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="section">
+        <div class="row">
+          <div class="col s3">
+            <strong>Languages</strong>
+          </div>
+          <div class="col s9">
+            English, advance level, 6 years from Cultural Inglesa de Bs As
+          </div>
+        </div>
+      </div>
+    </div>
     <div id="test-swipe-3" class="col s12 green">Test 3</div>
     </div>
     </div>
