Solo prueba desde otra compu

--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
       </div>
       <div class="col s8"> <br>
         <h6 class="light blue-grey-text text-lighten-2"><small>Alejandro Delgado</small></h6>
-        <h5 class="light"><small>Web Designer</small></h5>
+        <h5 class="light"><small>Web Designerrr</small></h5>
       </div>
     </li>
     <li class="row" style="opacity: 0;">
