--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <div class="valign-wrapper">
 <div class="row container">
     <div class="col s12 m6">
-        <h1 class="thin">BIENVENIDOooo</h1>
+        <h1 class="thin">BIENVENIDO</h1>
         <h6 class="thin">Otra dimensión en diseño</h6>
     </div>
     <div class="col s12 m6 center-align"><br><br><br>          
