--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@
       <li class="tab col s3"><a href="#test-swipe-3">Tools</a></li>
     </ul>
 
-    <div class="black-text">
+    <div class="carousel-height">
     <div id="test-swipe-1" class="col s12">
       <div class="black-text">
         <br>
@@ -117,13 +117,11 @@
             </div>
           </div>
         </div>
-        <div class="divider"></div>
-
-
       </div>
     </div>
     <div id="test-swipe-2" class="col s12">
       <br>
+        <div class="black-text">
       <div class="section">
         <div class="row">
           <div class="col s3">
@@ -158,11 +156,18 @@
           </div>
         </div>
       </div>
+        </div>
     </div>
-    <div id="test-swipe-3" class="col s12 green">Test 3</div>
+
+    <div id="test-swipe-3" class="col s12">
+        <br>
+        <div class="chip blue-grey darken-3">
+            <img src="imagenes/adobe-ae.png" alt="Contact Person">
+            <span class="white-text light">After Effects</span>
+        </div>
+    </div>
     </div>
     </div>
 
   </div>
 </div>
-
