Probando la info de las TABS en cards

--- a/resume.html
+++ b/resume.html
@@ -48,47 +48,54 @@
     <div id="test-swipe-1" class="col s12">
       <div class="black-text">
         <br>
-        <div class="section">
-          <div class="row">
-            <div class="col s3"><strong>10/2010 - Present</strong></div>
-            <div class="col s9">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis consequuntur voluptate accusamus adipisci numquam, earum neque quo aliquid deserunt nesciunt. Laboriosam id atque eum cumque saepe fuga, molestias eius maiores!</div>
-          </div>
-        </div>
-        <div class="divider"></div>
-        <div class="section">
-          <div class="row">
-            <div class="col s3"><p><strong>11/2009 - 09/2010</strong></p></div>
-            <div class="col s9">
-              <p>Fotomontaje de imagenes y diseños 3D</p>
-              <p>Fotomontajes aplicados sobre diferentes espacios , principalmente  fotos de shoppings. Aplicando en los mismos imagenes de productos navideños, usando como principal herramienta Photoshop e Ilustrator.</p>
-              <p>Creacion de personas u objetos en 3D Max, a partir de un diseño, para luego realizar fotomontajes en Photoshop. Los objetos en 3D, pueden estar hechos en low o high poly según amerite la complejidad, aplicando texturización en Mental Ray para optimizar los tiempos de entrega.</p>
-              <p>Presentaciones de proyectos animados en Flash y After Effects., a diferentes clientes en el exterior como COCA-COLA Femsa, PEPSI, Kraft OREO, MOVISTAR. A nivel nacional el grupo CENCOSUD, abarcando los shoppings Plaza Oeste, Unicenter, El solar de la Abadia.</p>
+        <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s3"><strong>10/2010 - Present</strong></div>
+              <div class="col s9">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis consequuntur voluptate accusamus adipisci numquam, earum neque quo aliquid deserunt nesciunt. Laboriosam id atque eum cumque saepe fuga, molestias eius maiores!</div>
             </div>
           </div>
         </div>
-        <div class="divider"></div>
-        <div class="section">
-          <div class="row">
-            <div class="col s3"><p><strong>09/2009 - 11/2009</strong></p></div>
-            <div class="col s9">
-              <p>Diseño de banners para paginas web </p>
-              <p>Estrada - ZOO de Argentina (www.aprendedibujando.com.ar)</p>
-              <p>Animcaión de dos banners en After Efects CS4, pasado a Flash CS3. (link: Home) <br>Creación de diapositivas de imágenes en Flash CS3. (link: Los Animales)</p>
-              <p>Estrada  (www.educandoargentinos.com.ar)</p>
-              <p>Modificación de la pagina principal, insertanto un Header animado y botonera. (Hechos en Flash CS3)</p>
-              <p>GENERCORP (cambio de identidad corporativa de GenerCauca a Genercorp) </p>
-              <p>A partir de un diseño pre-aprobado,  se hizo un protector de pantallas para pasar por proyector en
-                conferencias. (hecho en Flash CS3) <br>
-                Protector de pantallas para uso institucional en sus oficinas. (editado en video)</p>
-              <p>Lageneración (www.lageneracion.com)</p>
-              <p>Actualización de la home, para incorporar nuevos links y un video.</p>
-              <p>Incentivo LG (www.lgfunrace.com.ar)</p>
-              <p>Animación de banners a través de un diseño, hecho por un diseñador gráfico y aprobado por el cliente.</p>
-              <p>Diseño de video presentacion del lanzamiento a los clientes.</p>
+
+        <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s3"><p><strong>11/2009 - 09/2010</strong></p></div>
+              <div class="col s9">
+                <p>Fotomontaje de imagenes y diseños 3D</p>
+                <p>Fotomontajes aplicados sobre diferentes espacios , principalmente  fotos de shoppings. Aplicando en los mismos imagenes de productos navideños, usando como principal herramienta Photoshop e Ilustrator.</p>
+                <p>Creacion de personas u objetos en 3D Max, a partir de un diseño, para luego realizar fotomontajes en Photoshop. Los objetos en 3D, pueden estar hechos en low o high poly según amerite la complejidad, aplicando texturización en Mental Ray para optimizar los tiempos de entrega.</p>
+                <p>Presentaciones de proyectos animados en Flash y After Effects., a diferentes clientes en el exterior como COCA-COLA Femsa, PEPSI, Kraft OREO, MOVISTAR. A nivel nacional el grupo CENCOSUD, abarcando los shoppings Plaza Oeste, Unicenter, El solar de la Abadia.</p>
+              </div>
             </div>
           </div>
         </div>
-        <div class="divider"></div>
+
+        <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s3"><p><strong>09/2009 - 11/2009</strong></p></div>
+              <div class="col s9">
+                <p>Diseño de banners para paginas web </p>
+                <p>Estrada - ZOO de Argentina (www.aprendedibujando.com.ar)</p>
+                <p>Animcaión de dos banners en After Efects CS4, pasado a Flash CS3. (link: Home) <br>Creación de diapositivas de imágenes en Flash CS3. (link: Los Animales)</p>
+                <p>Estrada  (www.educandoargentinos.com.ar)</p>
+                <p>Modificación de la pagina principal, insertanto un Header animado y botonera. (Hechos en Flash CS3)</p>
+                <p>GENERCORP (cambio de identidad corporativa de GenerCauca a Genercorp) </p>
+                <p>A partir de un diseño pre-aprobado,  se hizo un protector de pantallas para pasar por proyector en
+                  conferencias. (hecho en Flash CS3) <br>
+                  Protector de pantallas para uso institucional en sus oficinas. (editado en video)</p>
+                <p>Lageneración (www.lageneracion.com)</p>
+                <p>Actualización de la home, para incorporar nuevos links y un video.</p>
+                <p>Incentivo LG (www.lgfunrace.com.ar)</p>
+                <p>Animación de banners a través de un diseño, hecho por un diseñador gráfico y aprobado por el cliente.</p>
+                <p>Diseño de video presentacion del lanzamiento a los clientes.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
         <div class="section">
           <div class="row">
             <div class="col s3"><p><strong>09/2009 - 11/2009</strong></p></div>
