--- a/resume.html
+++ b/resume.html
@@ -95,32 +95,35 @@
           </div>
         </div>
 
-
-        <div class="section">
-          <div class="row">
-            <div class="col s3"><p><strong>09/2009 - 11/2009</strong></p></div>
-            <div class="col s9">
-              <p>Diseño de banners para paginas web </p>
-              <p>Materna Argentina – España - Perú (www.materna.com.ar / www.materna.com.pr)</p>
-              <p>Diseño de banners para diferentes clientes, según las especificaciones que ellos pedieran. Manteniendo una estética acorde a la página.</p>
-              <p>Alta y baja de banners, usando el servidor provisto por la empresa.</p>
-              <p>Confección de la grafica para newsletters. Plasmándolo en un archivo HTML.</p>
-              <p>Circulo Huggies – Club Huggies (www.circulohuggies.com.ar / www.clubhuggies.com.ar)</p>
-              <p>Diseño de banners para diferentes clientes, según las especificaciones que ellos pedieran. Manteniendo una estética acorde a la pagina.<br>
-                Protector de pantallas para uso institucional en sus oficinas. (editado en video)</p>
+        <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s3"><p><strong>09/2009 - 11/2009</strong></p></div>
+              <div class="col s9">
+                <p>Diseño de banners para paginas web </p>
+                <p>Materna Argentina – España - Perú (www.materna.com.ar / www.materna.com.pr)</p>
+                <p>Diseño de banners para diferentes clientes, según las especificaciones que ellos pedieran. Manteniendo una estética acorde a la página.</p>
+                <p>Alta y baja de banners, usando el servidor provisto por la empresa.</p>
+                <p>Confección de la grafica para newsletters. Plasmándolo en un archivo HTML.</p>
+                <p>Circulo Huggies – Club Huggies (www.circulohuggies.com.ar / www.clubhuggies.com.ar)</p>
+                <p>Diseño de banners para diferentes clientes, según las especificaciones que ellos pedieran. Manteniendo una estética acorde a la pagina.<br>
+                  Protector de pantallas para uso institucional en sus oficinas. (editado en video)</p>
+              </div>
             </div>
           </div>
         </div>
-        <div class="divider"></div>
-        <div class="section">
-          <div class="row">
-            <div class="col s3"><p><strong>04/2002 - 09/2008</strong></p></div>
-            <div class="col s9">
-              <p>Área de compras <br> Contacto permanente con los proveedores para confirmar las entregas. Data-entry en el sistema SAP manteniendo un control del stock</p>
-              <p>Administrativo Comercio exterior <br> Data-entry en el sistema SAP (Altas-bajas-modificaciones) de los clientes nacionales e internacionales. Chequeo permanente en la Web del Sistema MARIA (AFIP), de pago de derechos y reintegros. Logística de transportes a nivel nacional y países limítrofes para la entrega de materiales.  Facturación. Reclamo de pagos a clientes del exterior. Liquidación de divisas.  Pedido de transferencias al exterior.</p>
-              <p>Administrativo Tesorería <br> Confección de cheques. Pedido de transferencias. Consultas de cuentas corrientes del sistema operativo Comercial  de los clientes. Logística de los cadetes.</p>
-              <p>Cadete de Tesorería<br>
-                Depósitos con cheque a bancos. Transferencias bancarias. Mantenimiento del archivo.</p>
+
+        <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s3"><p><strong>04/2002 - 09/2008</strong></p></div>
+              <div class="col s9">
+                <p>Área de compras <br> Contacto permanente con los proveedores para confirmar las entregas. Data-entry en el sistema SAP manteniendo un control del stock</p>
+                <p>Administrativo Comercio exterior <br> Data-entry en el sistema SAP (Altas-bajas-modificaciones) de los clientes nacionales e internacionales. Chequeo permanente en la Web del Sistema MARIA (AFIP), de pago de derechos y reintegros. Logística de transportes a nivel nacional y países limítrofes para la entrega de materiales.  Facturación. Reclamo de pagos a clientes del exterior. Liquidación de divisas.  Pedido de transferencias al exterior.</p>
+                <p>Administrativo Tesorería <br> Confección de cheques. Pedido de transferencias. Consultas de cuentas corrientes del sistema operativo Comercial  de los clientes. Logística de los cadetes.</p>
+                <p>Cadete de Tesorería<br>
+                  Depósitos con cheque a bancos. Transferencias bancarias. Mantenimiento del archivo.</p>
+              </div>
             </div>
           </div>
         </div>
@@ -128,49 +131,90 @@
     </div>
     <div id="test-swipe-2" class="col s12">
       <br>
-        <div class="black-text">
-      <div class="section">
-        <div class="row">
-          <div class="col s3">
-            <strong>Tertiary Education</strong>
-          </div>
-          <div class="col s9">
-            Ingreso en el año 2007 a la Escuela Da Vinci, en la carrera Diseño Multimedial. <br> En curso (6to. y último cuatrimestre)
-            <p>Egresado en el año 2005 del ISFDyT Nº 46 en la carrera Analista de Sistemas con orientación en Desarrollo de Aplicaciones.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="divider"></div>
-      <div class="section">
-        <div class="row">
-          <div class="col s3">
-            <strong>High School</strong>
-          </div>
-          <div class="col s9">
-            Egresada en el año 2001 de la Escuela de enseñanza Media Nº 6 Jose  Felix Bogado con el titulo de Bachiller en Ciencias Naturales.
+      <div class="black-text">
+        <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s3"><strong>Tertiary Education</strong></div>
+              <div class="col s9">Ingreso en el año 2007 a la Escuela Da Vinci, en la carrera Diseño Multimedial. <br> En curso (6to. y último cuatrimestre)
+                <p>Egresado en el año 2005 del ISFDyT Nº 46 en la carrera Analista de Sistemas con orientación en Desarrollo de Aplicaciones.
+                </p></div>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="divider"></div>
-      <div class="section">
-        <div class="row">
-          <div class="col s3">
-            <strong>Languages</strong>
-          </div>
-          <div class="col s9">
-            English, advance level, 6 years from Cultural Inglesa de Bs As
+
+        <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s3"> <strong>High School</strong></div>
+              <div class="col s9">Egresada en el año 2001 de la Escuela de enseñanza Media Nº 6 Jose  Felix Bogado con el titulo de Bachiller en Ciencias Naturales.
+                </p></div>
+            </div>
           </div>
         </div>
-      </div>
+
+        <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s3"><strong>Languages</strong></div>
+              <div class="col s9">English, advance level, 6 years from Cultural Inglesa de Bs As</div>
+            </div>
+          </div>
+        </div>
         </div>
     </div>
 
     <div id="test-swipe-3" class="col s12">
+      <br>
+      <h5 class="light black-text">Adobe</h5>
+      <div class="chip blue-grey darken-3">
+          <img src="imagenes/adobe-ae.png" alt="Contact Person">
+          <span class="white-text light">After Effects</span>
+      </div>
+      <div class="chip blue-grey darken-3">
+        <img src="imagenes/adobe-il.png" alt="Contact Person">
+        <span class="white-text light">Illustrator</span>
+      </div>
+      <div class="chip blue-grey darken-3">
+        <img src="imagenes/adobe-ps.png" alt="Contact Person">
+        <span class="white-text light">Photoshop</span>
+      </div>
+      <div class="chip blue-grey darken-3">
+        <img src="imagenes/adobe-dw.png" alt="Contact Person">
+        <span class="white-text light">Dreamweaver</span>
+      </div>
+      <div class="chip blue-grey darken-3">
+        <img src="imagenes/adobe-pr.png" alt="Contact Person">
+        <span class="white-text light">Premiere</span>
+      </div>
         <br>
+        <br>
+      <h5 class="black-text light">Editing Tools</h5>
+        <h6 class="black-text light">CODE</h6>
+      <div class="chip blue-grey darken-3">
+        <img src="imagenes/sublime.png" alt="Contact Person">
+        <span class="white-text light">Sublime</span>
+      </div>
         <div class="chip blue-grey darken-3">
-            <img src="imagenes/adobe-ae.png" alt="Contact Person">
-            <span class="white-text light">After Effects</span>
+            <img src="imagenes/eclipse.png" alt="Contact Person">
+            <span class="white-text light">Eclipse</span>
+        </div>
+        <div class="chip blue-grey darken-3">
+            <img src="imagenes/intellij.png" alt="Contact Person">
+            <span class="white-text light">IntelliJ</span>
+        </div>
+        <h6 class="black-text light">MEDIA</h6>
+        <div class="chip blue-grey darken-3">
+            <img src="imagenes/vegas.png" alt="Contact Person">
+            <span class="white-text light">Sony Vegas</span>
+        </div>
+        <div class="chip blue-grey darken-3">
+            <img src="imagenes/sound-forge.png" alt="Contact Person">
+            <span class="white-text light">Sound Forge</span>
+        </div>
+        <div class="chip blue-grey darken-3">
+            <img src="imagenes/3d-max.png" alt="Contact Person">
+            <span class="white-text light">3D Max</span>
         </div>
     </div>
     </div>
