Falta arreglar el blacktext para el menu de arriba y de abajo

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@ html, body {
     <div class="categories-wrapper container">
         <div class="categories-container pin-top" style="top: 0px;">
           <ul class="categories db">
-            <li class="k"><a  id="m-home-2" href="#home">Todo</a></li>
-            <li><a id="m-resume" href="#resume">Resume</a></li>
-            <li><a id="m-resume" href="#galeria">Galería</a></li>
+            <li class="k"><a class="blackText"  id="m-home-2" href="#home">Todo</a></li>
+            <li><a class="blackText" id="m-resume" href="#resume">Resume</a></li>
+            <li><a class="blackText" id="m-gallery" href="#gallery">Galería</a></li>
           </ul>
 <!--         <div class="categories-container pin-top" style="top: 0px;">
         <div class="nav-content">
