--- a/resume.html
+++ b/resume.html
@@ -166,30 +166,7 @@
 
     <div id="test-swipe-3" class="col s12">
       <br>
-      <h5 class="light black-text">Adobe</h5>
-      <div class="chip blue-grey darken-3">
-          <img src="imagenes/adobe-ae.png" alt="Contact Person">
-          <span class="white-text light">After Effects</span>
-      </div>
-      <div class="chip blue-grey darken-3">
-        <img src="imagenes/adobe-il.png" alt="Contact Person">
-        <span class="white-text light">Illustrator</span>
-      </div>
-      <div class="chip blue-grey darken-3">
-        <img src="imagenes/adobe-ps.png" alt="Contact Person">
-        <span class="white-text light">Photoshop</span>
-      </div>
-      <div class="chip blue-grey darken-3">
-        <img src="imagenes/adobe-dw.png" alt="Contact Person">
-        <span class="white-text light">Dreamweaver</span>
-      </div>
-      <div class="chip blue-grey darken-3">
-        <img src="imagenes/adobe-pr.png" alt="Contact Person">
-        <span class="white-text light">Premiere</span>
-      </div>
-        <br>
-        <br>
-      <h5 class="black-text light">Editing Tools</h5>
+      <h5 class="black-text light">Editing code Tools</h5>
         <h6 class="black-text light">CODE</h6>
       <div class="chip blue-grey darken-3">
         <img src="imagenes/sublime.png" alt="Contact Person">
@@ -203,7 +180,19 @@
             <img src="imagenes/intellij.png" alt="Contact Person">
             <span class="white-text light">IntelliJ</span>
         </div>
+      <div class="chip blue-grey darken-3">
+        <img src="imagenes/adobe-dw.png" alt="Contact Person">
+        <span class="white-text light">Dreamweaver</span>
+      </div>
         <h6 class="black-text light">MEDIA</h6>
+      <div class="chip blue-grey darken-3">
+        <img src="imagenes/adobe-ae.png" alt="Contact Person">
+        <span class="white-text light">After Effects</span>
+      </div>
+      <div class="chip blue-grey darken-3">
+        <img src="imagenes/adobe-pr.png" alt="Contact Person">
+        <span class="white-text light">Premiere</span>
+      </div>
         <div class="chip blue-grey darken-3">
             <img src="imagenes/vegas.png" alt="Contact Person">
             <span class="white-text light">Sony Vegas</span>
@@ -216,9 +205,17 @@
             <img src="imagenes/3d-max.png" alt="Contact Person">
             <span class="white-text light">3D Max</span>
         </div>
+      <h6 class="black-text light">PRINT AND DIGITAL</h6>
+      <div class="chip blue-grey darken-3">
+        <img src="imagenes/adobe-il.png" alt="Contact Person">
+        <span class="white-text light">Illustrator</span>
+      </div>
+      <div class="chip blue-grey darken-3">
+        <img src="imagenes/adobe-ps.png" alt="Contact Person">
+        <span class="white-text light">Photoshop</span>
+      </div>
     </div>
     </div>
     </div>
-
   </div>
 </div>
