--- a/gallery.html
+++ b/gallery.html
@@ -1,107 +1,58 @@
-<div class="parallax-container">
-    <div class="section">
-        <div class="container">
-            <br><br>
-            <h1 class="header center orange-text">Into the Wild</h1>
-            <div class="row center">
-                <div class="col s12 m5">
-                    <div class="card-panel teal darken-1">
-          <span class="white-text">I am a very simple card. I am good at containing small bits of information.
-          I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
-          </span>
+<link rel="stylesheet" href="sass/aos.css" />
+<div class="valign-wrapper">
+    <div class="row ">
+        <div class="col hide-on-small-only m3 l2">
+            <ul class="section table-of-contents">
+                <li><a href="#introduction">Introduction</a></li>
+                <li><a href="#structure">Structure</a></li>
+                <li><a href="#initialization">Intialization</a></li>
+            </ul>
+        </div>
+        <div class="col s12 m10 parallax-container">
+            <div class="col s10 offset-s2"  data-aos="fade-up" data-aos-anchor-placement="top-center"  data-aos-delay="10">
+                <h2 class="thin">Prueba</h2><br><br>
+            </div>
+
+            <div class="col s12 m3" data-aos="fade-up" data-aos-anchor-placement="top-center"  data-aos-delay="50">
+                <div class="card blue-grey z-depth-3">
+                    <div class="card-content white-text">
+                        <span class="card-title">Card Title</span>
+                        <p>I am a very simple card. I am good at containing small bits of information.
+                            I am convenient because I require little markup to use effectively.</p>
                     </div>
                 </div>
-                <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
             </div>
-            <div class="row center">
-                <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
-            </div>
-            <br><br>
-            <div class="parallax">
-            <div class="parallax fondo-parallax z-depth-2"><img src="imagenes/universe-2.jpg" alt="Unsplashed background img 1"></div>
-            </div>
-        </div>
-
-    </div>
-
-</div>
-
-
-<div class="container">
-    <div class="section">
-
-        <!--   Icon Section   -->
-        <div class="row">
-            <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-                    <h5 class="center">Speeds up development</h5>
-
-                    <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <div class="col s12 m3" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="100">
+                <div class="card teal z-depth-3">
+                    <div class="card-content white-text">
+                        <span class="card-title">Card Title</span>
+                        <p>I am a very simple card. I am good at containing small bits of information.
+                            I am convenient because I require little markup to use effectively.</p>
+                    </div>
                 </div>
             </div>
 
-            <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-                    <h5 class="center">User Experience Focused</h5>
 
-                    <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
-                </div>
+            <div class="col s12 m3 offset-m3" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="150">
+                <div class="card orange darken-4 z-depth-3 hoverable">
+                    <div class="card-content white-text">
+                        <span class="card-title">Card Title</span>
+                        <p>I am a very simple card. I am good at containing small bits of information.
+                            I am convenient because I require little markup to use effectively.</p>
+                    </div>
+                </div><br><br><br>
             </div>
 
-            <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-                    <h5 class="center">Easy to work with</h5>
-
-                    <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
-                </div>
-            </div>
+            <div class="fondo-parallax z-depth-2"  data-aos="fade-up" data-aos-anchor-placement="top-center"><img class="" src="imagenes/universe-2.jpg" alt=""></div>
         </div>
-
     </div>
 </div>
 
 
-<div class="parallax-container">
-    <div class="section">
-        <div class="container">
-            <div class="row center">
-                <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
-            </div>
-        </div>
-    </div>
-    <div class="parallax"><img src="imagenes/background-multi-1.jpg" alt="Unsplashed background img 2"></div>
-</div>
-
-<div class="container">
-    <div class="section">
-
-        <div class="row">
-            <div class="col s12 center">
-                <h3><i class="mdi-content-send brown-text"></i></h3>
-                <h4>Contact Us</h4>
-                <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
-            </div>
-        </div>
-
-    </div>
-</div>
-
-
-<div class="parallax-container">
-    <div class="section">
-        <div class="container">
-            <div class="row center">
-                <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
-            </div>
-        </div>
-    </div>
-    <div class="parallax"><img src="imagenes/background-multi-2.jpg" alt="Unsplashed background img 3"></div>
-</div>
+<script src="js/bin/aos.js"></script>
 <script>
 $(document).ready(function(){
-$('.parallax').parallax();
+    AOS.init();
+    $('.scrollspy').scrollSpy();
 });
 </script>
