estoy empezando a cambiar la altura del contenido para que pueda hacer overflow:visible todas las animaciones

--- a/gallery.html
+++ b/gallery.html
@@ -1,14 +1,142 @@
 <link rel="stylesheet" href="sass/aos.css" />
-<div class="valign-wrapper">
+<div class="">
     <div class="row ">
-        <div class="col hide-on-small-only m3 l2">
+        <div class="col hide-on-small-only m3 l2 sticky-container">
             <ul class="section table-of-contents">
                 <li><a href="#introduction">Introduction</a></li>
                 <li><a href="#structure">Structure</a></li>
                 <li><a href="#initialization">Intialization</a></li>
             </ul>
         </div>
+
         <div class="col s12 m10 parallax-container">
+            <div class="row">
+                <div class="aos-item" data-aos="fade-up">
+                    <div class="aos-item__inner"><h3>1</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-down">
+                    <div class="aos-item__inner"><h3>2</h3></div>
+                </div>
+                <div class="aos-item" data-aos="zoom-out-down">
+                    <div class="aos-item__inner"><h3>3</h3></div>
+                </div>
+                <div class="aos-item" data-aos="flip-down">
+                    <div class="aos-item__inner"><h3>4</h3></div>
+                </div>
+                <div class="aos-item" data-aos="flip-up">
+                    <div class="aos-item__inner"><h3>5</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-down">
+                    <div class="aos-item__inner"><h3>6</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>7</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-down">
+                    <div class="aos-item__inner"><h3>8</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>9</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-down">
+                    <div class="aos-item__inner"><h3>10</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-up">
+                    <div class="aos-item__inner"><h3>11</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-down">
+                    <div class="aos-item__inner"><h3>12</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>13</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-up">
+                    <div class="aos-item__inner"><h3>14</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>15</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-up">
+                    <div class="aos-item__inner"><h3>16</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-down">
+                    <div class="aos-item__inner"><h3>17</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-up">
+                    <div class="aos-item__inner"><h3>18</h3></div>
+                </div>
+                <div class="aos-item" data-aos="zoom-out">
+                    <div class="aos-item__inner"><h3>19</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-up">
+                    <div class="aos-item__inner"><h3>20</h3></div>
+                </div>
+                <div class="aos-item" data-aos="zoom-out">
+                    <div class="aos-item__inner"><h3>21</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>22</h3></div>
+                </div>
+                <div class="aos-item" data-aos="zoom-out-up">
+                    <div class="aos-item__inner"><h3>23</h3></div>
+                </div>
+                <div class="aos-item" data-aos="zoom-out-down">
+                    <div class="aos-item__inner"><h3>24</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>25</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>26</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>27</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>28</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>29</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>30</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>31</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>32</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>33</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>34</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>35</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>36</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>37</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>38</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>39</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>40</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>41</h3></div>
+                </div>
+                <div class="aos-item" data-aos="fade-in">
+                    <div class="aos-item__inner"><h3>42</h3></div>
+                </div>
             <div class="col s10 offset-s2"  data-aos="fade-up" data-aos-anchor-placement="top-center"  data-aos-delay="10">
                 <h2 class="thin">Prueba</h2><br><br>
             </div>
@@ -40,10 +168,22 @@
                         <p>I am a very simple card. I am good at containing small bits of information.
                             I am convenient because I require little markup to use effectively.</p>
                     </div>
-                </div><br><br><br>
+                </div>
             </div>
 
-            <div class="fondo-parallax z-depth-2"  data-aos="fade-up" data-aos-anchor-placement="top-center"><img class="" src="imagenes/universe-2.jpg" alt=""></div>
+            <div class="fondo-parallax z-depth-2"  data-aos="fade-up" data-aos-anchor-placement="top-center"><img class="" src="imagenes/universe-1.jpg" alt=""></div>
+            </div>
+            <div class="row">
+                <div class="col s12 m3" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="150">
+                    <div class="card orange darken-4 z-depth-3 hoverable">
+                        <div class="card-content white-text">
+                            <span class="card-title">Card Title</span>
+                            <p>I am a very simple card. I am good at containing small bits of information.
+                                I am convenient because I require little markup to use effectively.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -52,7 +192,9 @@
 <script src="js/bin/aos.js"></script>
 <script>
 $(document).ready(function(){
-    AOS.init();
+    AOS.init({
+        easing: 'ease-in-out-sine'
+    });
     $('.scrollspy').scrollSpy();
 });
 </script>
