Viendo que pasa en gallery.html por la altura del contenedor principal que en 1920x1080 se corta todo por la mitad

--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="sass/aos.css" />
 <div class="">
     <div class="row ">
-        <div class="col hide-on-small-only m3 l2 sticky-container">
+        <div class="col hide-on-small-only m3 l1 sticky-container">
             <ul class="section table-of-contents">
                 <li><a href="#introduction">Introduction</a></li>
                 <li><a href="#structure">Structure</a></li>
@@ -9,7 +9,7 @@
             </ul>
         </div>
 
-        <div class="col s12 m10 parallax-container">
+        <div class="col s12 m11 parallax-container">
             <div class="row">
             <div class="col s10 offset-s2"  data-aos="fade-up" data-aos-anchor-placement="top-center"  data-aos-delay="10">
                 <h2 class="thin">Prueba</h2><br><br>
@@ -57,6 +57,43 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="row">
+                <div class="col s10 offset-s2"  data-aos="fade-up" data-aos-anchor-placement="top-center"  data-aos-delay="10">
+                    <h2 class="thin">Prueba</h2><br><br>
+                </div>
+
+                <div class="col s12 m3" data-aos="fade-up" data-aos-anchor-placement="top-center"  data-aos-delay="50">
+                    <div class="card blue-grey z-depth-3">
+                        <div class="card-content white-text">
+                            <span class="card-title">Card Title</span>
+                            <p>I am a very simple card. I am good at containing small bits of information.
+                                I am convenient because I require little markup to use effectively.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m3" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="100">
+                    <div class="card teal z-depth-3">
+                        <div class="card-content white-text">
+                            <span class="card-title">Card Title</span>
+                            <p>I am a very simple card. I am good at containing small bits of information.
+                                I am convenient because I require little markup to use effectively.</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col s12 m3 offset-m3" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="150">
+                    <div class="card orange darken-4 z-depth-3 hoverable">
+                        <div class="card-content white-text">
+                            <span class="card-title">Card Title</span>
+                            <p>I am a very simple card. I am good at containing small bits of information.
+                                I am convenient because I require little markup to use effectively.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="fondo-parallax z-depth-2"  data-aos="fade-up" data-aos-anchor-placement="top-center"><img class="" src="imagenes/universe-1.jpg" alt=""></div>
             </div>
         </div>
     </div>
